feat(events): update events with Friday Perreo Night, Neon Party, and Grupo Kazzabe for January

--- a/public/index.html
+++ b/public/index.html
@@ -887,20 +887,29 @@
         <h2 class="section-title fade-in">PRÓXIMOS EVENTOS</h2>
         <div class="events-grid">
             <div class="event-card fade-in">
-                <img src="Eventos/Navidad241225.jpeg" alt="Felices Fiestas - La Gran Banda" class="event-image">
+                <img src="Eventos/perreonight090126.jpeg" alt="Friday Perreo Night" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Miércoles 24 de Diciembre - 11:30 PM</div>
-                    <div class="event-title">Felices Fiestas - La Gran Banda</div>
-                    <div class="event-description">Show en vivo con La Gran Banda en Casa Blanca Beer Garden. Pre-venta: L. 350 | Taquilla: L. 400. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <div class="event-date">Viernes 9 de Enero - 9:00 PM</div>
+                    <div class="event-title">Friday Perreo Night</div>
+                    <div class="event-description">¡FREE COVER! Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
             <div class="event-card fade-in">
-                <img src="Eventos/Astronavidad241225.jpeg" alt="Un Diciembre Para Recordar" class="event-image">
+                <img src="Eventos/neonparty100126.jpeg" alt="First Saturday Neon Party" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Miércoles 24 de Diciembre - 11:30 PM</div>
-                    <div class="event-title">Un Diciembre Para Recordar</div>
-                    <div class="event-description">Noche temática navideña especial. Cover: L. 150. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <div class="event-date">Sábado 10 de Enero - 9:00 PM</div>
+                    <div class="event-title">First Saturday Neon Party</div>
+                    <div class="event-description">¡FREE COVER! Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
+                </div>
+            </div>
+            <div class="event-card fade-in">
+                <img src="Eventos/kazzabe230126.jpeg" alt="Día de la Mujer con Grupo Kazzabe" class="event-image">
+                <div class="event-content">
+                    <div class="event-date">Viernes 23 de Enero - 9:00 PM</div>
+                    <div class="event-title">Día de la Mujer con Grupo Kazzabe</div>
+                    <div class="event-description">Cover: L. 250. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
