fix(events): restore Grupo Kazzabe event for Jan 23

--- a/public/index.html
+++ b/public/index.html
@@ -896,6 +896,15 @@
                 </div>
             </div>
             <div class="event-card fade-in">
+                <img src="Eventos/kazzabe230126.jpeg" alt="Día de la Mujer con Grupo Kazzabe" class="event-image">
+                <div class="event-content">
+                    <div class="event-date">Viernes 23 de Enero - 9:00 PM</div>
+                    <div class="event-title">Día de la Mujer con Grupo Kazzabe</div>
+                    <div class="event-description">Cover: L. 250. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
+                </div>
+            </div>
+            <div class="event-card fade-in">
                 <img src="Eventos/antivalentines140226.jpeg" alt="Anti Valentines" class="event-image">
                 <div class="event-content">
                     <div class="event-date">Sábado 14 de Febrero - 9:00 PM</div>
