feat(events): add Casino Edition #ELNANDOTEO event for Jan 17

--- a/public/index.html
+++ b/public/index.html
@@ -896,6 +896,15 @@
                 </div>
             </div>
             <div class="event-card fade-in">
+                <img src="Eventos/casinonight170126.jpeg" alt="Casino Edition #ELNANDOTEO" class="event-image">
+                <div class="event-content">
+                    <div class="event-date">Sábado 17 de Enero - 9:00 PM</div>
+                    <div class="event-title">Casino Edition #ELNANDOTEO</div>
+                    <div class="event-description">Noche temática de casino con magia y juegos de cartas. Cover: L. 150. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
+                </div>
+            </div>
+            <div class="event-card fade-in">
                 <img src="Eventos/kazzabe230126.jpeg" alt="Día de la Mujer con Grupo Kazzabe" class="event-image">
                 <div class="event-content">
                     <div class="event-date">Viernes 23 de Enero - 9:00 PM</div>
