--- a/public/index.html
+++ b/public/index.html
@@ -887,38 +887,29 @@
         <h2 class="section-title fade-in">PRÓXIMOS EVENTOS</h2>
         <div class="events-grid">
             <div class="event-card fade-in">
-                <img src="Eventos/girlsnight160126.jpeg" alt="Bad Girls and Bad Boys" class="event-image">
+                <img src="Eventos/sweather300126.jpeg" alt="Sweater Weather" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Viernes 16 de Enero - 9:00 PM</div>
-                    <div class="event-title">Bad Girls and Bad Boys</div>
-                    <div class="event-description">Cover: L. 100. FREE COVER antes de las 10:00 PM. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <div class="event-date">Viernes 30 de Enero - 9:00 PM</div>
+                    <div class="event-title">Sweater Weather</div>
+                    <div class="event-description">¡FREE COVER! Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
             <div class="event-card fade-in">
-                <img src="Eventos/casinonight170126.jpeg" alt="Casino Edition #ELNANDOTEO" class="event-image">
+                <img src="Eventos/lagranbanda300126.jpeg" alt="La Gran Banda" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Sábado 17 de Enero - 9:00 PM</div>
-                    <div class="event-title">Casino Edition #ELNANDOTEO</div>
-                    <div class="event-description">Noche temática de casino con magia y juegos de cartas. Cover: L. 150. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <div class="event-date">Viernes 30 de Enero - 9:00 PM</div>
+                    <div class="event-title">La Gran Banda</div>
+                    <div class="event-description">Show en vivo en Beer Garden. Cover: L. 200. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
             <div class="event-card fade-in">
-                <img src="Eventos/kazzabe230126.jpeg" alt="Día de la Mujer con Grupo Kazzabe" class="event-image">
+                <img src="Eventos/rewind310126.jpeg" alt="Astronomical Rewind Party 2016" class="event-image">
                 <div class="event-content">
-                    <div class="event-date">Viernes 23 de Enero - 9:00 PM</div>
-                    <div class="event-title">Día de la Mujer con Grupo Kazzabe</div>
-                    <div class="event-description">Cover: L. 250. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
-                    <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
-                </div>
-            </div>
-            <div class="event-card fade-in">
-                <img src="Eventos/antivalentines140226.jpeg" alt="Anti Valentines" class="event-image">
-                <div class="event-content">
-                    <div class="event-date">Sábado 14 de Febrero - 9:00 PM</div>
-                    <div class="event-title">Anti Valentines</div>
-                    <div class="event-description">Con KD La Caracola, Fresh Bodden y JR. Clark. Cover: L. 250. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
+                    <div class="event-date">Sábado 31 de Enero - 9:00 PM</div>
+                    <div class="event-title">Astronomical Rewind Party 2016</div>
+                    <div class="event-description">Noche temática retro con Retrica y Pokémon. Cover: L. 100. Reservaciones: 9437-3757 | Astrobot: 9490-2444</div>
                     <a href="https://www.instagram.com/casablanca_sps/" class="btn btn-primary">Más Información</a>
                 </div>
             </div>
