feat(meta): add logo as favicon for browser tab

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="La Gran Casa Blanca">
     
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="/logo.jpg">
+    <link rel="apple-touch-icon" href="/logo.jpg">
+    <link rel="shortcut icon" type="image/jpeg" href="/logo.jpg">
+    
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="La Gran Casa Blanca - El Mejor Ambiente Nocturno de San Pedro Sula, Honduras">
     <meta property="og:description" content="La Gran Casa Blanca es el ambiente nocturno #1 de San Pedro Sula, Honduras. Eventos épicos, música increíble, zona VIP, estacionamiento. ¡Reserva tu mesa ahora!">
