feat(meta): update favicon to use casablancadorado.png instead of logo.jpg

--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,9 @@
     <meta name="apple-mobile-web-app-title" content="La Gran Casa Blanca">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/jpeg" href="/logo.jpg">
-    <link rel="apple-touch-icon" href="/logo.jpg">
-    <link rel="shortcut icon" type="image/jpeg" href="/logo.jpg">
+    <link rel="icon" type="image/png" href="/casablancadorado.png">
+    <link rel="apple-touch-icon" href="/casablancadorado.png">
+    <link rel="shortcut icon" type="image/png" href="/casablancadorado.png">
     
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="La Gran Casa Blanca - El Mejor Ambiente Nocturno de San Pedro Sula, Honduras">
